[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/resources/carc.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/tooltip/tip_up.gd" type="Script" id=5]
[ext_resource path="res://Styles/Labels/narrow.tres" type="DynamicFont" id=6]
[ext_resource path="res://Styles/Panels/block_inside_tip.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/Panels/tag_bg.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
expand_margin_left = 9.0
expand_margin_right = 7.0
expand_margin_top = 5.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.658824, 0, 0.2 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.658824, 0, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.0509804 )
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.247059, 0.247059, 0.247059, 1 )
draw_center = false
border_color = Color( 0.384314, 0.384314, 0.384314, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 11
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.701961, 0, 1, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.7, 0, 1, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.07, 0.89, 1, 0.21 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.07, 0.89, 1, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.741176, 0.0509804, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.74, 0.05, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.321569, 0.560784, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.321569, 0.560784, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.701961, 0.329412, 0, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.701961, 0.329412, 0, 0.4 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=13]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.90735e-08
margin_right = 258.0
margin_bottom = 121.0
rect_min_size = Vector2( 258, 0 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 248.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 248.0
margin_bottom = 111.0

[node name="Active" type="HBoxContainer" parent="VBoxContainer"]
size_flags_horizontal = 0

[node name="false" type="MarginContainer" parent="VBoxContainer/Active"]
visible = false
margin_right = 52.0
margin_bottom = 25.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="bg" type="Panel" parent="VBoxContainer/Active/false"]
margin_left = 5.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/Active/false"]
margin_left = 5.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Inactive"

[node name="permanent" type="MarginContainer" parent="VBoxContainer/Active"]
visible = false
margin_left = 56.0
margin_right = 125.0
margin_bottom = 25.0
rect_min_size = Vector2( 66, 0 )
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/Active/permanent"]
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Active/permanent"]
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Permanent"

[node name="refundable" type="MarginContainer" parent="VBoxContainer/Active"]
visible = false
margin_left = 129.0
margin_right = 264.0
margin_bottom = 25.0
rect_min_size = Vector2( 66, 0 )
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/Active/refundable"]
margin_left = 5.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/Active/refundable"]
margin_left = 5.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Temporarily refundable"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 238.0
margin_bottom = 40.0

[node name="bg" type="Panel" parent="VBoxContainer/MarginContainer"]
margin_right = 238.0
margin_bottom = 36.0
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 238.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/MarginContainer/HBoxContainer/icon"]
position = Vector2( 18, 18 )
texture = ExtResource( 1 )

[node name="name" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 238.0
margin_bottom = 36.0
rect_min_size = Vector2( 45, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "1"
valign = 1
autowrap = true

[node name="desc" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 238.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
text = "One line"
autowrap = true

[node name="effects" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_bottom = 62.0
size_flags_horizontal = 0

[node name="idym" type="MarginContainer" parent="VBoxContainer/effects"]
visible = false
margin_right = 65.0
margin_bottom = 25.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/effects/idym"]
margin_left = 5.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )

[node name="text" type="Label" parent="VBoxContainer/effects/idym"]
margin_left = 5.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Boost: 8.5"

[node name="igom_iron" type="MarginContainer" parent="VBoxContainer/effects"]
visible = false
margin_top = 29.0
margin_right = 128.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/effects/igom_iron"]
margin_left = 5.0
margin_top = 5.0
margin_right = 123.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="text" type="Label" parent="VBoxContainer/effects/igom_iron"]
margin_left = 5.0
margin_top = 5.0
margin_right = 123.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Iron LORED boost: 8.5"

[node name="igom_cop" type="MarginContainer" parent="VBoxContainer/effects"]
visible = false
margin_top = 29.0
margin_right = 146.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/effects/igom_cop"]
margin_left = 5.0
margin_top = 5.0
margin_right = 141.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[node name="text" type="Label" parent="VBoxContainer/effects/igom_cop"]
margin_left = 5.0
margin_top = 5.0
margin_right = 141.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Copper LORED boost: 8.5"

[node name="igom_irono" type="MarginContainer" parent="VBoxContainer/effects"]
visible = false
margin_top = 58.0
margin_right = 149.0
margin_bottom = 83.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/effects/igom_irono"]
margin_left = 5.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 11 )

[node name="text" type="Label" parent="VBoxContainer/effects/igom_irono"]
margin_left = 5.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Iron Ore LORED boost: 8.5"

[node name="igom_copo" type="MarginContainer" parent="VBoxContainer/effects"]
visible = false
margin_top = 87.0
margin_right = 167.0
margin_bottom = 112.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/effects/igom_copo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 12 )

[node name="text" type="Label" parent="VBoxContainer/effects/igom_copo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Copper Ore LORED boost: 8.5"

[node name="m" type="MarginContainer" parent="VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 238.0
margin_bottom = 86.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="g" type="Panel" parent="VBoxContainer/m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 228.0
margin_bottom = 10.0
custom_styles/panel = ExtResource( 7 )

[node name="price" type="VBoxContainer" parent="VBoxContainer/m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 228.0
margin_bottom = 10.0
custom_constants/separation = 0

[node name="requires" type="MarginContainer" parent="VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 238.0
margin_bottom = 101.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="bg" type="Panel" parent="VBoxContainer/requires"]
margin_left = 10.0
margin_top = 10.0
margin_right = 228.0
margin_bottom = 25.0
custom_styles/panel = ExtResource( 7 )

[node name="v" type="VBoxContainer" parent="VBoxContainer/requires"]
margin_left = 10.0
margin_top = 10.0
margin_right = 228.0
margin_bottom = 25.0

[node name="text" type="Label" parent="VBoxContainer/requires/v"]
margin_right = 218.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.800781, 0.800781, 0.800781, 1 )
text = "Required Upgrade"
align = 1
